# src/main/kotlin/ua/vn/div/feature/order/domain/model/OrderItemModel.kt
@@ -1,0 +1,15 @@
+package ua.vn.div.feature.order.domain.model
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class OrderItemDTO(
+    val itemId: Int,
+    val orderUuid: String,
+    val itemAmount: Int
+)
+
+@Serializable
+data class OrderItemCreateRequest(
+    val orderItemDTO: OrderItemDTO
+)
